feat: Implement image upload functionality for authors and books
- Added MvcConfig to handle resource paths for uploaded images.
- Created ImmagineService to manage image uploads and storage.
- Introduced DTOs for new image uploads (NuovaImmagineDTO) and for authors (NuovoAutoreDTO).
- Updated Autore and Libro services to save images associated with authors and books.
- Enhanced AdminController to handle new image upload forms and processing.
- Added API endpoint for searching authors by name.
- Updated HTML templates for adding new authors and books, including image upload fields.
- Modified application properties to define upload directories for images.
- Added additional Spring configuration metadata for upload directories.